force-app/main/default/objects/Investigacao__c/Investigacao__c.object-meta.xml
<CustomObject>
    <description>Registro de cada investigação do AgentTrace — memória institucional (incidente, causa, área, capacidades, duração).</description>
    <label>Investigação</label>
    <pluralLabel>Investigações</pluralLabel>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>