force-app/main/default/objects/Investigacao__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Área da causa</label>
    <description>codigo, dados, integracao, config, externo ou inconclusivo.</description>
    <type>Text</type>
    <length>60</length>
</CustomField>