force-app/main/default/objects/Investigacao__c/fields/Capacidades__c.field-meta.xml
<CustomField>
    <fullName>Capacidades__c</fullName>
    <label>Capacidades usadas</label>
    <type>Text</type>
    <length>255</length>
</CustomField>