force-app/main/default/objects/Investigacao__c/fields/Conclusao__c.field-meta.xml
<CustomField>
    <fullName>Conclusao__c</fullName>
    <label>Conclusão</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>