force-app/main/default/objects/Investigacao__c/fields/Custo_USD__c.field-meta.xml
<CustomField>
    <fullName>Custo_USD__c</fullName>
    <label>Custo estimado (USD)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>4</scale>
</CustomField>