force-app/main/default/objects/Investigacao__c/fields/Duracao_Seg__c.field-meta.xml
<CustomField>
    <fullName>Duracao_Seg__c</fullName>
    <label>Duração (s)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>