force-app/main/default/objects/Investigacao__c/fields/Impacto_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Impacto_Negocio__c</fullName>
    <label>Impacto no Negócio</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>