force-app/main/default/objects/Investigacao__c/fields/Incidente__c.field-meta.xml
<CustomField>
    <fullName>Incidente__c</fullName>
    <label>Incidente</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>