force-app/main/default/objects/Investigacao__c/fields/Passos__c.field-meta.xml
<CustomField>
    <fullName>Passos__c</fullName>
    <label>Passos</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>