force-app/main/default/objects/Investigacao__c/fields/Tokens__c.field-meta.xml
<CustomField>
    <fullName>Tokens__c</fullName>
    <label>Tokens</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>